--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 Fonts
 ===============
 */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap');
 
 /*
 =============== 
@@ -38,8 +38,8 @@ Variables
   --clr-grey-9: hsl(212, 33%, 89%);
   --clr-grey-10: hsl(210, 36%, 96%);
   --clr-white: #fff;
-  --ff-primary: "Roboto", sans-serif;
-  --ff-secondary: "Open Sans", sans-serif;
+  --ff-primary: 'Roboto', sans-serif;
+  --ff-secondary: 'Open Sans', sans-serif;
   --transition: all 0.3s linear;
   --spacing: 0.25rem;
   --radius: 0.5rem;
@@ -179,6 +179,9 @@ p {
 }
 .bg-grey {
   background: var(--clr-grey-10);
+}
+.second-section {
+  padding-top: 1rem;
 }
 /*
 =============== 
@@ -393,7 +396,7 @@ Hero
 
   .hero-img::before,
   .about-img::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 100%;
@@ -538,7 +541,7 @@ Projects
   opacity: 0.1;
 }
 .project::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -574,8 +577,8 @@ Projects
     grid-template-rows: 200px 200px;
     gap: 1rem;
     grid-template-areas:
-      "a b b"
-      "a c d";
+      'a b b'
+      'a c d';
   }
   .project-img {
     height: 100%;
@@ -618,7 +621,7 @@ Connect
   z-index: -2;
 }
 .connect::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -943,6 +946,8 @@ Products Page
 .project-container img {
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
+  height: 200px;
+  object-fit: cover;
 }
 .project-container {
   position: relative;
